--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
       .d2-home__footer > a { font-size: 12px; color: #ABABAB; text-decoration: none; }
       .d2-home__loading { height: 32px; width: 32px; margin-bottom: 20px; }
       .d2-home__title { color: #FFF; font-size: 14px; margin-bottom: 10px; }
-      .d2-home__sub-title { color: #ABABAB; font-size: 12px; }</style><link href=css/chunk-vendors.ca14b348.css rel=stylesheet><link href=css/app.64b60c80.css rel=stylesheet></head><body><script src=./live2dw/lib/L2Dwidget.min.js></script><script>window.L2Dwidget.init({
+      .d2-home__sub-title { color: #ABABAB; font-size: 12px; }</style><link href=css/chunk-vendors.ca14b348.css rel=stylesheet><link href=css/app.64b60c80.css rel=stylesheet></head><body><script src=./live2dw/lib/L2Dwidget.min.js></script>
+      <script>window.L2Dwidget.init({
         "pluginRootPath":"live2dw/",
         "pluginJsPath":"lib/",
         "pluginModelPath":"assets/",
@@ -16,8 +17,7 @@
         },
         "display": {
           "position":"right",
-          "width":200,
-          "height":350
+   
         },
         "mobile":{  "show":false },
         "dialog":{
