--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html class="windows desktop portrait"><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><title>jackiechenlovely</title><style>html, body, #app { height: 100%; margin: 0px; padding: 0px; }
+<!DOCTYPE html><html class="windows desktop portrait"><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><title>jackiechenlovely</title><style>html, body, #app { height: 100%; margin: 0px; padding: 0px; }
       .d2-home { background-color: #303133; height: 100%; display: flex; flex-direction: column; }
       .d2-home__main { user-select: none; width: 100%; flex-grow: 1; display: flex; justify-content: center; align-items: center; flex-direction: column; }
       .d2-home__footer { width: 100%; flex-grow: 0; text-align: center; padding: 1em 0; }
