--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           "position":"right",
    
         },
-        "mobile":{  "show":false },
+        "mobile":{  "show":true },
         "dialog":{
           "enable":true,
           "hitokoto":true
