--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       .d2-home__title { color: #FFF; font-size: 14px; margin-bottom: 10px; }
       .d2-home__sub-title { color: #ABABAB; font-size: 12px; }</style><link href=css/chunk-vendors.ca14b348.css rel=stylesheet><link href=css/app.64b60c80.css rel=stylesheet></head><body><script src=./live2dw/lib/L2Dwidget.min.js></script>
       <script>window.L2Dwidget.init({
+        "enable": true,
+        "scriptFrom": "local",
         "pluginRootPath":"live2dw/",
         "pluginJsPath":"lib/",
         "pluginModelPath":"assets/",
@@ -17,7 +19,8 @@
         },
         "display": {
           "position":"right",
-   
+          "width": 150, 
+          "height": 300 
         },
         "mobile":{  "show":true },
         "dialog":{
