--- a/index.html
+++ b/index.html
@@ -1,31 +1,9 @@
-<!DOCTYPE html><html class="windows desktop portrait"><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><title>jackiechenlovely</title><style>html, body, #app { height: 100%; margin: 0px; padding: 0px; }
+<!DOCTYPE html><html class="windows desktop portrait"><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><title>jackiechenlovely</title> <link rel="import" href="./model.html"><style>html, body, #app { height: 100%; margin: 0px; padding: 0px; }
       .d2-home { background-color: #303133; height: 100%; display: flex; flex-direction: column; }
       .d2-home__main { user-select: none; width: 100%; flex-grow: 1; display: flex; justify-content: center; align-items: center; flex-direction: column; }
       .d2-home__footer { width: 100%; flex-grow: 0; text-align: center; padding: 1em 0; }
       .d2-home__footer > a { font-size: 12px; color: #ABABAB; text-decoration: none; }
       .d2-home__loading { height: 32px; width: 32px; margin-bottom: 20px; }
       .d2-home__title { color: #FFF; font-size: 14px; margin-bottom: 10px; }
-      .d2-home__sub-title { color: #ABABAB; font-size: 12px; }</style><link href=css/chunk-vendors.ca14b348.css rel=stylesheet><link href=css/app.64b60c80.css rel=stylesheet></head><body><script src=./live2dw/lib/L2Dwidget.min.js></script>
-      <script>window.L2Dwidget.init({
-        "enable": true,
-        "scriptFrom": "local",
-        "pluginRootPath":"live2dw/",
-        "pluginJsPath":"lib/",
-        "pluginModelPath":"assets/",
-        "tagMode":true,
-        "debug":false,
-        "model":{
-          "jsonPath":"/live2dw/assets/shizuku.model.json"
-        },
-        "display": {
-          "position":"right",
-          "width": 150, 
-          "height": 300 
-        },
-        "mobile":{  "show":true },
-        "dialog":{
-          "enable":true,
-          "hitokoto":true
-        },
-        "log":false,
-      });</script><noscript><strong>很抱歉，如果没有 JavaScript 支持将不能正常工作。请启用浏览器的 JavaScript 然后继续。</strong></noscript><div id=app><div class=d2-home><div class=d2-home__main><img class=d2-home__loading src=./image/loading/loading-spin.svg alt=loading><div class=d2-home__title>正在加载资源</div><div class=d2-home__sub-title>初次加载资源可能需要较多时间 请耐心等待</div></div><div class=d2-home__footer><a href=https://github.com/d2-projects/d2-admin target=_blank>https://github.com/d2-projects/d2-admin</a></div></div></div><script src=js/lover.js></script><script src=js/jquery.warpdrive.min.js></script><script src=js/chunk-vendors.4696c959.js></script><script src=js/app.4670ecbc.js></script></body></html>
+      .d2-home__sub-title { color: #ABABAB; font-size: 12px; }</style><link href=css/chunk-vendors.ca14b348.css rel=stylesheet><link href=css/app.64b60c80.css rel=stylesheet></head><body>
+     <noscript><strong>很抱歉，如果没有 JavaScript 支持将不能正常工作。请启用浏览器的 JavaScript 然后继续。</strong></noscript><div id=app><div class=d2-home><div class=d2-home__main><img class=d2-home__loading src=./image/loading/loading-spin.svg alt=loading><div class=d2-home__title>正在加载资源</div><div class=d2-home__sub-title>初次加载资源可能需要较多时间 请耐心等待</div></div><div class=d2-home__footer><a href=https://github.com/d2-projects/d2-admin target=_blank>https://github.com/d2-projects/d2-admin</a></div></div></div><script src=js/lover.js></script><script src=js/jquery.warpdrive.min.js></script><script src=js/chunk-vendors.4696c959.js></script><script src=js/app.4670ecbc.js></script></body></html>
