--- a/model.html
+++ b/model.html
@@ -15,7 +15,7 @@
     "debug":false,
     "model": {
       //jsonpath控制显示那个小萝莉模型，下面这个就是我觉得最可爱的小萝莉模型
-      jsonPath: "/live2dw/assets/shizuku.model.json",
+      jsonPath: "https://unpkg.com/live2d-widget-model-chitose@1.0.5/assets/chitose.model.json",
       "scale": 1
     },
     "display": {
